# routing_demo

./: CLAUDE.md  README.md
backend/: README.md  config.jsonc  main.py  pyproject.toml
backend/data/: distance_matrix.json  route_geometries.json  test_data.json
backend/notebooks/: explore.ipynb
backend/science/: batcher.py  benchmark.py  router.py  structs.py  tests.py
backend/utils/: compute_distance_matrix.py  compute_route_geometries.py
frontend/: .env.production  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/components/: stacked-layout.tsx
frontend/src/: App.tsx  constants.ts  index.css
frontend/src/components/: ConfigPanel.tsx  ContainerGrid.tsx  GuidedTour.tsx  IconRail.tsx  ResultsPanel.tsx  SlideOutPanel.tsx  SolutionNavigator.tsx  TruckCard.tsx
frontend/src/components/map/: DestinationMarker.tsx  RouteMap.tsx  RoutePolyline.tsx  SourceMarker.tsx
frontend/src/components/truck/: TruckVisual.tsx
frontend/src/data/: mockSolutions.ts
frontend/src/services/: api.ts  osrm.ts
frontend/src/tour/: tourSteps.ts  useMobileDetect.ts
frontend/src/types/: routing.ts
