[project]
name = "routing-demo-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.134.0",
    "uvicorn>=0.41.0",
    "pydantic>=2.12.5",
    "googlemaps>=4.10.0",
    "requests>=2.32.5",
    "ipykernel>=7.2.0",
]

[project.optional-dependencies]
dev = [
    "ipython>=9.10.0",
]

[tool.uv]
python = "3.12"
